jsonschemadsl2ecore.trafo.opt/test/test104/invalidtests/example3.test104
{
	"ale":{
		"runs-on":1
	}	
} 